<resources>
    <string name="app_name">HwCalculator</string>
    <string name="key_8">8</string>
    <string name="key_7">7</string>
    <string name="key_9">9</string>
    <string name="key_clear">C</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_4">4</string>
    <string name="key_div">/</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_mult">*</string>
    <string name="key_0">0</string>
    <string name="key_demi">,</string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_equals">=</string>
    <string name="edit_start">0</string>
    <string name="start">0</string>
</resources>