<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/img1"
    >
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="0"
        android:gravity="right"
        android:layout_margin="16dp"
        android:textSize="25sp"
        />

    <Button
        android:id="@+id/but_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_7"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        android:background="#66FF0000"
        />
    <Button
        android:id="@+id/but_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_8"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toEndOf="@id/but_7"
        android:layout_margin="8dp"
        android:background="#66FF0000"
        />
    <Button
        android:id="@+id/but_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_9"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toEndOf="@id/but_8"
        android:layout_margin="8dp"
        android:background="#66FF0000"/>
    <Button
        android:id="@+id/but_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_clear"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toEndOf="@id/but_9"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#70FF0000"/>
    <Button
        android:id="@+id/but_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_4"
        app:layout_constraintTop_toBottomOf="@id/but_7"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        android:background="#66FF0000"
        />
    <Button
        android:id="@+id/but_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_5"
        app:layout_constraintTop_toBottomOf="@id/but_8"
        app:layout_constraintStart_toEndOf="@id/but_4"
        android:layout_margin="8dp"
        android:background="#66FF0000"
        />
    <Button
        android:id="@+id/but_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_6"
        app:layout_constraintTop_toBottomOf="@id/but_9"
        app:layout_constraintStart_toEndOf="@id/but_5"
        android:layout_margin="8dp"
        android:background="#66FF0000"
        />
    <Button
        android:id="@+id/but_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_div"
        app:layout_constraintTop_toBottomOf="@id/but_clear"
        app:layout_constraintStart_toEndOf="@id/but_6"
        android:layout_margin="8dp"
        android:background="#70FF0000"
        />
    <Button
        android:id="@+id/but_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_1"
        app:layout_constraintTop_toBottomOf="@id/but_4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        android:background="#66FF0000"
        />
    <Button
        android:id="@+id/but_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_2"
        app:layout_constraintTop_toBottomOf="@id/but_5"
        app:layout_constraintStart_toEndOf="@id/but_1"
        android:layout_margin="8dp"
        android:background="#66FF0000"/>
    <Button
        android:id="@+id/but_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_3"
        app:layout_constraintTop_toBottomOf="@id/but_6"
        app:layout_constraintStart_toEndOf="@id/but_2"
        android:layout_margin="8dp"
        android:background="#66FF0000"
        />
    <Button
        android:id="@+id/but_mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_mult"
        app:layout_constraintTop_toBottomOf="@id/but_div"
        app:layout_constraintStart_toEndOf="@id/but_3"
        android:layout_margin="8dp"
        android:background="#70FF0000"
        />
    <Button
        android:id="@+id/but_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_0"
        app:layout_constraintTop_toBottomOf="@id/but_1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        android:background="#66FF0000"
        />
    <Button
        android:id="@+id/but_demi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_demi"
        app:layout_constraintTop_toBottomOf="@id/but_2"
        app:layout_constraintStart_toEndOf="@id/but_0"
        android:layout_margin="8dp"
        android:background="#70FF0000"/>
    <Button
        android:id="@+id/but_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_plus"
        app:layout_constraintTop_toBottomOf="@id/but_3"
        app:layout_constraintStart_toEndOf="@id/but_demi"
        android:layout_margin="8dp"
        android:background="#70FF0000"/>
    <Button
        android:id="@+id/but_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_minus"
        app:layout_constraintTop_toBottomOf="@id/but_mult"
        app:layout_constraintStart_toEndOf="@id/but_plus"
        android:layout_margin="8dp"
        android:background="#70FF0000"
        />
    <Button
        android:id="@+id/but_equals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_equals"
        app:layout_constraintTop_toBottomOf="@id/but_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:background="#70FF0000"
        />

</androidx.constraintlayout.widget.ConstraintLayout>